add css grid layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Cuprum&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 	<title>React App</title>
-	<link href="/static/css/main.758b6e80.css" rel="stylesheet">
+	<link href="/static/css/main.css" rel="stylesheet">
 </head>
 <body>
 	<noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
 	<div id="root"></div>
+	<div class="container">
+		<header class="item item-1"></header>
+		<aside class="item item-2"></aside>
+		<section class="item item-3"></section>
+		<footer class="item item-4"></footer>
+	</div>
 	<script type="text/javascript" src="/static/js/main.js"></script>
 </body>
 </html>
