--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,14 @@
 	<link rel="manifest" href="/manifest.json">
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Cuprum&amp;subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-	<title>React App</title>
+ <!-- Bootstrap CSS -->	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="/static/css/main.css" rel="stylesheet">
+
+	<title>React App</title>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 	<noscript>
@@ -17,8 +22,21 @@
 	</noscript>
 	<div id="root"></div>
 	<div class="container">
-		<header class="item item-1"></header>
-		<aside class="item item-2"></aside>
+		<header class="item item-1">
+		</header>
+		<nav class="item item-2">
+			<nav class="navbar navbar-dark bg-dark collapse navbar-collapse">
+			<!-- Navbar content -->
+			  <a class="navbar-brand" href="#">Cool site</a>
+			    <span class="navbar-text">
+			      This is the best site in www
+			    </span>
+				  <form class="form-inline my-2 my-lg-0">
+				      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				  </form>
+			</nav>
+		</nav>
 		<section class="item item-3"></section>
 		<footer class="item item-4"></footer>
 	</div>
