--- a/client_html/public/index.html
+++ b/client_html/public/index.html
@@ -15,12 +15,27 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+	<!-- <script type="text/babel" type="module" src="./static/js/main.cjs">
+
+	</script> -->
 </head>
 <body>
 	<noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
 	<div id="root"></div>
+	<script type="text/babel">
+		import React from React;
+		function Hello() {
+			return <h1>Hello World!</h1>;
+		}
+		
+		ReactDOM.render(<Hello />, document.getElementById('root'))
+	</script>
+
 	<div class="container">
 		<header class="item item-1">
 		</header>
